# library-tool

./: .dockerignore  .gcloudignore  .gitignore  CLAUDE.md  README.md  REQUIREMENTS.md  local_library_partial.xlsx  pyproject.toml  whl_catalog.csv
.claude/: launch.example.json
.github/scripts/: release_preflight.py  smoke_packaged_sidecar.py  write_config.py
.github/workflows/: ci.yml  pages.yml  release.yml
android/BookCapture/: README.md  release-signing-cert.sha256  settings.gradle.kts
books/04b85b8b5062/: transcript.txt
books/0a7a9164dea0/: transcript.txt
books/0b00e1b95abc/: transcript.txt
books/0b5086571618/: transcript.txt
books/1236ed91efb4/: transcript.txt
books/1e4dc3c8d6e6/: transcript.txt
books/219941b10213/: transcript.txt
books/24d0d02d34f5/: transcript.txt
books/2ba4043d5611/: transcript.txt
books/33cb680f80e2/: transcript.txt
books/462734a522d3/: transcript.txt
books/52109878fd0e/: transcript.txt
books/54058d41c650/: transcript.txt
books/579b8eba6768/: transcript.txt
books/62509561b83c/: transcript.txt
books/681a9a160dd2/: transcript.txt
books/69d041ecbb70/: transcript.txt
books/7913bf8104f0/: transcript.txt
books/7cda2ef908b1/: transcript.txt
books/87517f7c6851/: transcript.txt
books/95580278f8f3/: transcript.txt
books/a0e9bab3ef15/: transcript.txt
books/a4e1be72d52a/: transcript.txt
books/b7f3a4305721/: transcript.txt
books/ca1fed6b6bcf/: transcript.txt
books/ca7c44e89009/: transcript.txt
data/: ch_library.xlsx
desktop/: .gitignore  README.md  main.js  package-lock.json  package.json  preload.js  startup-preload.js  startup.html  updater-preload.js  updater.html  window-registry.js
desktop/signing/: README.md  (+2 more)
docs/: architecture.md  cloud_capture_setup.md  collections-sync-design.md  corrections-manager-issues.md  facsimile-workbench-plan.md  fonts.md  lib-format.md  library-analyze-design.md  modular-engine-architecture.md  releasing.md  rights.md  search-design.md  ui-review-dialogs.md  ui-review-workbench.md  ui-ux-redesign-spec.md  worktrees.md
output/: books_index.json  books_metadata.json  ch_library.json  ch_library_report.xlsx  manual_entries.json  whl_builds.json  whl_corrections.json
scripts/: check.ps1  check.sh
services/image_processor/: .dockerignore  .env.example  .gcloudignore  .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
services/image_processor/tests/: conftest.py  test_api.py  test_models.py  test_pipeline.py  test_reconciliation.py  test_settings.py  test_store.py  test_worker.py
services/image_processor/whl_image_processor/: __init__.py  api.py  models.py  pipeline.py  settings.py  store.py  worker.py
tests/: changelog_behavior.test.js  cloud_sync_frontend_behavior.test.js  collections_ui_behavior.test.js  conftest.py  copyright_cache_behavior.test.js  corrections_artifact_model_behavior.test.js  corrections_artifact_overlay_behavior.test.js  corrections_artifacts_behavior.test.js  corrections_books_behavior.test.js  corrections_classification_commands_behavior.test.js  corrections_classification_controls_behavior.test.js  corrections_classification_keymap_behavior.test.js  corrections_engine_adapter_behavior.test.js  corrections_image_adjust_tool_behavior.test.js  corrections_image_editor_canvas_behavior.test.js  corrections_image_editor_state_behavior.test.js  corrections_properties_behavior.test.js  corrections_reviews_behavior.test.js  corrections_shell_behavior.test.js  desktop_issue_fixes_behavior.test.js  desktop_transport_security_behavior.test.js  desktop_workbench_window_registry_behavior.test.js  downloads_release_policy.test.js  electron_lifecycle_behavior.test.js  engine_client_behavior.test.js  facets_behavior.test.js  font_manifest_behavior.test.js  lib_open_behavior.test.js  pdf_viewer_behavior.test.js  provider_discovery_behavior.test.js  publish_tree_behavior.test.js  remarks_behavior.test.js  replica_workbench_behavior.test.js  rpcsearch.test.js  settings_behavior.test.js  smart_scan_frontend_behavior.test.js  test_activity_cloud.py  test_analyze_integrated_workspace.py  test_android_ui_catalog.py  test_backfill_rights.py  (+136 more)
tools/: README.md  android_ui_catalog.py  backfill_rights.py  build_books.py  build_catalog_report.py  build_ol_index.py  build_ol_search.py  capture_lib.py  capture_pipeline.py  catalog_checks.py  cli_credentials.py  cloud_defaults.py  cloud_setup.py  convert_xlsx.py  copyright_registration.py  corpus_sync.py  fix_pdf_url_host.py  fontman.py  layout_roles.py  libcommon.py  libformat.py  make_android_icon.py  make_sample_lib.py  ocr_blocks_probe.py  ol_client.py  r2_store.py  release_publish.py  replica_service.py  requirements.txt  scan_search.py  store_sync.py  supabase_auth.py  supabase_sync.py  whl_client.py  whl_scrape.py  worktree.py
transcript/: URecorder_20260624_184146.txt  URecorder_20260627_132757.txt  URecorder_20260627_140744.txt  URecorder_20260627_142643 (1).txt  URecorder_20260627_154733.txt
website/: 404.html  README.md  android-changelog.md  api.html  author.html  book.html  browse.html  changelog.md  confirmed.html  docs.html  downloads.html  index.html  read.html  releases.html  serve.py
(+389 files in other folders)
