# Packaging + tool configuration for the world-herb-library tools.
#
# Transitional layout: the Python code still lives as flat modules under
# tools/ (importable via script-directory semantics and the pytest
# `pythonpath` setting below), so installing this project adds no modules —
# `pip install -e .` exists to declare and pull the dependencies and the
# feature/dev extras from one canonical place. The physical move to an
# importable package (src/whl/...) is planned alongside the shared-core
# extraction, once the test suite protects it.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "world-herb-library"
version = "0.6.0"
description = "Cataloging workbench for the World Herb Library: Flask explorer, index builders, capture pipeline, cloud publish tools"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1",
    "Pillow>=10.0",
    "Flask>=3.0",
    "pypdf>=5.0",
    "PyMuPDF>=1.24",
]

[project.optional-dependencies]
# These back lazy in-function imports; missing ones degrade features at
# runtime. The frozen sidecar build must install every extra it intends to
# ship (desktop/package.json build:sidecar) — PyInstaller only warns.
ocr = ["pytesseract"]
aws = ["boto3"]
sheets = ["google-api-python-client", "google-auth"]
capture = ["opencv-python-headless", "numpy"]
# Capped so a new default ruff rule or a pytest major can't redden CI with
# zero code changes; bump the caps deliberately.
dev = ["pytest>=8,<10", "ruff>=0.15,<0.16"]

[tool.setuptools]
# No importable modules are installed yet — see the header comment.
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
# Flat-module layout: make tools/ (and the explorer's directory) importable
# the same way running the scripts by path does. tests/conftest.py sets
# WHL_DATA_ROOT to a throwaway directory BEFORE any of these are imported.
pythonpath = ["tools", "tools/whl_explorer"]

[tool.ruff]
# Default rule set (E4/E7/E9/F). The `# noqa: E402` markers on the entry
# scripts' path-setup imports are load-bearing until the package move lands.
extend-exclude = ["desktop"]
