# Packaging + tool configuration for the world-herb-library tools.
#
# Transitional layout: new framework-neutral engine code lives in the
# installable ``src/librarytool`` package while compatibility entry points and
# adapters still live under ``tools/``. The latter remain importable through
# script-directory semantics until each vertical has moved behind the engine.

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "world-herb-library"
version = "0.7.0"
description = "Cataloging workbench for the World Herb Library: Flask explorer, index builders, capture pipeline, cloud publish tools"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1",
    "Pillow>=10.0",
    "Flask>=3.0",
    "pypdf>=5.0",
    "PyMuPDF>=1.24",
    # The desktop's default OCR engine imports this at job runtime. Keeping it
    # optional made the frozen sidecar pass its executable check, then fail as
    # soon as the background worker tried to import the bridge.
    "pytesseract>=0.3.13",
]

[project.optional-dependencies]
# These back lazy in-function imports; missing ones degrade features at
# runtime. The frozen sidecar build must install every extra it intends to
# ship (desktop/package.json build:sidecar) — PyInstaller only warns.
ocr = []
aws = ["boto3"]
sheets = ["google-api-python-client", "google-auth"]
capture = ["opencv-python-headless", "numpy"]
# Capped so a new default ruff rule or a pytest major can't redden CI with
# zero code changes; bump the caps deliberately.
dev = ["pytest>=8,<10", "ruff>=0.15,<0.16"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Flat-module layout: make tools/ (and the explorer's directory) importable
# the same way running the scripts by path does. tests/conftest.py sets
# WHL_DATA_ROOT to a throwaway directory BEFORE any of these are imported.
pythonpath = ["src", "tools", "tools/whl_explorer"]

[tool.ruff]
# Default rule set (E4/E7/E9/F). The `# noqa: E402` markers on the entry
# scripts' path-setup imports are load-bearing until the package move lands.
extend-exclude = ["desktop"]
