[build-system]
requires = ["setuptools==80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whl-image-processor"
version = "0.1.0"
description = "Asynchronous book-photo cleanup worker for Library Tool Capture"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi==0.139.2",
    "httpx==0.28.1",
    "numpy==2.4.6",
    "opencv-python-headless==4.13.0.92",
    "Pillow==12.3.0",
    "pydantic==2.13.4",
    "uvicorn==0.51.0",
]

[project.scripts]
whl-image-worker = "whl_image_processor.worker:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["whl_image_processor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
